tests/parser/bad/cmodule-transition-with.scilla
scilla_version 0

contract Nothing ()

transition with
